# terrier

./: .coveragerc  .gitignore  README.rst  list_accessions.py  mkdocs.sh  pyproject.toml  seqtree-name.py  terrier_colab.ipynb
.github/workflows/: docs.yml  publish.yml  testing.yml
comparison-test-data/: Homo_sapiens.fasta  Mus_musculus.fasta  build-results.py  comparison-results.csv  comparison-results.tex
comparison-test-data/DeepTE/: DeepTE-human.csv  DeepTE-mouse.csv  DeepTE-rice.csv  fruit-fly-DeepTE.csv
comparison-test-data/TERL/: TERL-human.csv  TERL-mouse.csv  TERL-rice.csv  fruit-fly-TERL.csv
comparison-test-data/TEclass2/: TEclass2-fruit-fly.csv  TEclass2-human.csv  TEclass2-mouse.csv  TEclass2-rice.csv
comparison-test-data/Terrier/: Terrier-fruit-fly.csv  Terrier-human.csv  Terrier-mouse.csv  Terrier-rice.csv
comparison-test-data/Terrier-0.3/: Terrier-human.csv  Terrier-rice.csv
corkie/: __init__.py  apps.py  dataloaders.py
docs/: api.rst  cli.rst  comparison.rst  conf.py  index.rst  latest.rst  preprocessing.rst  reproduction.rst  training.rst
docs/images/: Repbase-seqtree.html  drosophila-terrier-confusion-matrix-threshold-0.7.html  drosophila-terrier-threshold-plot.html  oryza-terrier-confusion-matrix-threshold-0.7.html  oryza-terrier-threshold-plot.html
terrier/: __init__.py  apps.py  dataloaders.py  defaults.py  dfam.py  evaluate.py  famdb.py  loss.py  models.py  repbase-to-seqtree.py  repbase.py  repeat-masker.py  repeatmasker.py  terrier.bib
terrier/data/: TEClasses.tsv  repbase-to-repeatmasker.toml  repbase-to-repeatmasker2.csv  repbase.tree.txt
tests/: test_apps.py  test_evaluate.py  test_repeatmasker.py
tests/test-data/: custom.fna  repbase.ref  simple.ref
